// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders correctly with logo 1`] = `
<nav
  className="sc-AxirZ dYmHNG navbar navbar-light"
>
  <div>
    <img
      alt="Logo"
      className="sc-AxiKw bfWiUH"
      src="cover_no_background.png"
    />
  </div>
  <div
    className="flex-fill"
  >
    <form>
      <input
        aria-label="Search"
        autoFocus={true}
        className="sc-AxjAm ewWaGj form-control mr-sm-2"
        data-testid="search-bar"
        onChange={[Function]}
        placeholder="Search Courses "
        type="search"
        value=""
      />
    </form>
  </div>
  <div>
    <a
      className="btn btn-success ml-3"
      download="nu_schedule.csv"
      href="data:text/csv;charset=utf-8,﻿\\"Subject\\",\\"Start Date\\",\\"Start Time\\",\\"End Date\\",\\"End Time\\",\\"Location\\""
      onClick={[Function]}
      target="_self"
      title="Export Schedule to CSV"
    >
      Export
    </a>
  </div>
</nav>
`;

exports[`NavBar renders correctly without logo 1`] = `
<nav
  className="sc-AxirZ dYmHNG navbar navbar-light"
>
  <div
    className="flex-fill"
  >
    <form>
      <input
        aria-label="Search"
        autoFocus={true}
        className="sc-AxjAm ewWaGj form-control mr-sm-2"
        data-testid="search-bar"
        onChange={[Function]}
        placeholder="Search Courses "
        type="search"
        value=""
      />
    </form>
  </div>
  <div>
    <a
      className="btn btn-success ml-3"
      download="nu_schedule.csv"
      href="data:text/csv;charset=utf-8,﻿\\"Subject\\",\\"Start Date\\",\\"Start Time\\",\\"End Date\\",\\"End Time\\",\\"Location\\""
      onClick={[Function]}
      target="_self"
      title="Export Schedule to CSV"
    >
      Export
    </a>
  </div>
</nav>
`;
